--- a/src/app/pages/listapacientes/listapacientes-page.component.html
+++ b/src/app/pages/listapacientes/listapacientes-page.component.html
@@ -3,7 +3,7 @@
     <nav>
       <button [class.active]="selected === 'pacientes'" (click)="cambiarVista('pacientes')">Pacientes</button>
       <button [class.active]="selected === 'consulta'" (click)="cambiarVista('consulta')">Nueva Consulta</button>
-      <button [class.active]="selected === 'seguimiento'" (click)="cambiarVista('seguimiento')">Seguimiento</button>
+      <!-- <button [class.active]="selected === 'seguimiento'" (click)="cambiarVista('seguimiento')">Seguimiento</button> -->
     </nav>
   </header>
 
