--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
 <app-navbar-public *ngIf="showNavbarPublic()"></app-navbar-public>
 <app-navbar-private *ngIf="!showNavbarPublic()"></app-navbar-private>
 
-<!-- Contenido principal -->
-<section class="mx-5 mt-2">
+<!-- Contenido principal con margen superior para evitar sobreposición -->
+<section [ngClass]="showNavbarPublic() ? 'mx-5 mt-2' : 'mt-0'">
   <router-outlet></router-outlet>
 </section>
 
