--- a/src/app/components/shared/navbar-private/navbar-private.component.html
+++ b/src/app/components/shared/navbar-private/navbar-private.component.html
@@ -1,4 +1,4 @@
-<nav class="w-full bg-white border-b-2 border-blue-100 shadow-md px-6 py-4 flex justify-between items-center">
+<nav class="w-full bg-white border-b-2 border-blue-100 shadow-md flex justify-between items-center">
   <!-- Logo y título con diseño mejorado -->
   <div class="flex items-center space-x-4">
     <div class="flex items-center justify-center w-12 h-12 bg-gradient-to-br from-blue-500 to-blue-600 rounded-xl shadow-lg">
